<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/welcomeBackground"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="5dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textAppearance="@style/challeng1Style"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="144dp"
        android:layout_height="37dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/rounded_button"
        android:elevation="13dp"
        android:onClick="loadAndelaWebPage"
        android:text="@string/btn_about"
        android:textAppearance="@style/challeng1Style"
        app:layout_constraintEnd_toEndOf="@+id/textViewWelcome"
        app:layout_constraintStart_toStartOf="@+id/textViewWelcome"
        app:layout_constraintTop_toBottomOf="@+id/textViewWelcome" />

    <Button
        android:id="@+id/btnProfile"
        android:layout_width="142dp"
        android:layout_height="41dp"
        android:layout_marginTop="49dp"
        android:background="@drawable/rounded_button"
        android:onClick="loadProfilePage"
        android:text="@string/btn_profile"
        android:textAppearance="@style/challeng1Style"
        app:layout_constraintEnd_toEndOf="@+id/btnAbout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btnAbout"
        app:layout_constraintTop_toBottomOf="@+id/btnAbout" />
</android.support.constraint.ConstraintLayout>